course/section-25/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cheddar
spec:
  rules:
  - host: cheddar.192.168.99.119.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stilton
spec:
  rules:
  - host: stilton.192.168.99.119.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wensleydale
spec:
  rules:
  - host: wensleydale.192.168.99.119.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: 80
---
